tests/files/lexer_tests/should_fail/100.cmdr
//Should not parse due to missing lparen
while true) echo hi;